update download photos